# stm32g0xx_blink_cpp

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  stm32g071.ld  stm32g071.svd
cmake/: arm-none-eabi-toolchain.cmake
inc/: stm32g071xx.hpp
src/: startup_stm32g071.cpp
utils/: utils.hpp
